k8s/djangoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djangoapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: peopleportal
      component: djangoapp
  template:
    metadata:
      labels:
        project: peopleportal
        component: djangoapp
    spec:
      volumes:
        - name: volume-staticfiles
          persistentVolumeClaim:
            claimName: pvc-staticfiles
      containers:
        - name: djangoapp
          image: gagan144/peopleportal-djangoapp
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: volume-staticfiles
              mountPath: /app/staticfiles   # Path inside the container
              subPath: staticfiles   # Sub-directory inside the PVC
