k8s/djangoapp-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djangoapp-clusterip-service
spec:
  type: ClusterIP
  selector:
    project: peopleportal
    component: djangoapp
  ports:
    - port: 8001
      targetPort: 8001
