k8s/fileserver-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileserver-clusterip-service
spec:
  type: ClusterIP
  selector:
    project: peopleportal
    component: fileserver
  ports:
    - port: 8002
      targetPort: 8002
