k8s/ingress-nginx-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /static/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fileserver-clusterip-service
                port:
                  number: 8002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: djangoapp-clusterip-service
                port:
                  number: 8001
